[package]
name = "dotter"
version = "0.13.5"
authors = ["SuperCuber <amit.gold01@gmail.com>"]
description = "A dotfile manager and templater written in rust"
edition = "2024"
repository = "https://github.com/SuperCuber/dotter"
readme = "README.md"
keywords = ["dotter", "dotfiles", "manager"]
categories = ["command-line-utilities"]
license = "Unlicense"
rust-version = "1.85"

[dependencies]
anyhow = "1.*"
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.10"
crossterm = "0.29.0"
diff = "0.1.*"
handlebars = "6.*"
hostname = "0.3.*"
log = "0.4.*"
maplit = "1.*"
evalexpr = "13"
serde = { version = "1.*", features = ["derive"] }
shellexpand = "2.*"
simplelog = "0.12.*"
tokio = "1.*"
toml = "0.9.6"
watchexec = { version = "8", optional = true }
watchexec-events = { version = "6.0.0", optional = true }
watchexec-filterer-globset = { version = "8", optional = true }

[features]
default = ["scripting", "watch"]
scripting = ["handlebars/script_helper"]
watch = ["watchexec", "watchexec-events", "watchexec-filterer-globset"]

[dependencies.handlebars_misc_helpers]
version = "0.17.*"
default-features = false
features = ["string", "json"]

[dev-dependencies]
mockall = "0.12.1"
# Enable this instead for better failure messages (on nightly only)
# mockall = { version = "0.9.*", features = ["nightly"] }

[target.'cfg(windows)'.dependencies]
dunce = "1.*"

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
